# Lacrei-saude-api

./: .flake8  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
consultas/: models.py  serializers.py  services.py  tests.py  views.py
consultas/migrations/: 0001_initial.py  0002_consulta_asaas_id_consulta_status_pagamento_and_more.py
core/: settings.py  urls.py
