[project]
name = "lacrei-saude-api"
version = "0.1.0"
description = ""
authors = [
    {name = "DanilloCarvalho",email = "danillofcarvalho@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"